tests/lean/classAbbrev.lean.expected.out
classAbbrev.lean:5:13-5:22: error: type expected
failed to synthesize instance
  CoeSort (Type ?u → Type ?u) ?m
